# bioin

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
bioin/: gff.py  gff2table.py  table2fasta.py  tables.py
bioino/: __init__.py  cli.py  fasta.py  gff.py  tables.py  utils.py
docs/: requirements.txt
docs/source/: bioin.rst  bioino.rst  conf.py  index.md  index.rst  installation.md  modules.rst  usage.md
test/: tests.py
